--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "animulist",
-  "private": true,
+  "private": false,
+  "homepage": "https://esepbit.github.io/animulist-deploy/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,7 +10,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
